# api-docs.yaml
@@ -3,13 +3,13 @@ info:
   title: OpenAPI definition
   version: v0
 servers:
-- url: http://localhost:8080
-  description: Generated server url
+  - url: http://localhost:8080
+    description: Generated server url
 paths:
   /v1/enterprise-systems/:
     put:
       tags:
-      - enterprise systems
+        - enterprise systems
       summary: "for an provided enterprise system with the provided id, update the\
         \ information"
       operationId: updateEnterpriseSystems
@@ -24,16 +24,16 @@ paths:
           description: OK
     post:
       tags:
-      - enterprise systems
+        - enterprise systems
       summary: create an enterprise system
       description: ' create an enterprise system'
       operationId: addNewEnterpriseSystem
       parameters:
-      - name: enterpriseSystemsCreateRequest
-        in: query
-        required: true
-        schema:
-          $ref: '#/components/schemas/EnterpriseSystemsCreateRequest'
+        - name: enterpriseSystemsCreateRequest
+          in: query
+          required: true
+          schema:
+            $ref: '#/components/schemas/EnterpriseSystemsCreateRequest'
       responses:
         "200":
           description: return the newly created enterprise system
@@ -47,16 +47,16 @@ paths:
           description: Internal server error occurred
     delete:
       tags:
-      - enterprise systems
+        - enterprise systems
       summary: deletes an enterprise system with the provided id
       operationId: deleteEnterpriseSystem
       parameters:
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
       responses:
         "200":
           description: api will delete the provided enterprise system
@@ -67,18 +67,18 @@ paths:
   /v1/enterprise-systems/search:
     post:
       tags:
-      - enterprise systems
+        - enterprise systems
       summary: "search an enterprise system, api will return a list of enterprise\
         \ systems"
       description: " search an enterprise system, api will return a list of enterprise\
         \ systems"
       operationId: findEnterpriseSystems
       parameters:
-      - name: filter
-        in: query
-        required: true
-        schema:
-          $ref: '#/components/schemas/SearchRequest'
+        - name: filter
+          in: query
+          required: true
+          schema:
+            $ref: '#/components/schemas/SearchRequest'
       responses:
         "200":
           description: api will return a list of enterprise systems
@@ -93,23 +93,23 @@ paths:
   /v1/enterprise-systems/{id}:
     get:
       tags:
-      - enterprise systems
+        - enterprise systems
       summary: returns an enterprise system with the provided id
       operationId: getEnterpriseSystem
       parameters:
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
       responses:
         "200":
           description: api will return a list of enterprise systems
           content:
             '*/*':
               schema:
-                $ref: '#/components/schemas/EnterpriseSystem'
+                $ref: '#/components/schemas/EnterpriseSystemResponse'
         "400":
           description: Invalid request provided
         "500":
@@ -118,7 +118,7 @@ components:
   schemas:
     EnterpriseSystem:
       required:
-      - name
+        - name
       type: object
       properties:
         id:
@@ -128,7 +128,7 @@ components:
           type: string
         endpointUrl:
           type: string
-        authmethod:
+        authMethod:
           type: string
     FilterElement:
       type: object
@@ -155,6 +155,24 @@ components:
           type: string
         asc:
           type: boolean
+    PageableObject:
+      type: object
+      properties:
+        offset:
+          type: integer
+          format: int64
+        sort:
+          $ref: '#/components/schemas/Sort'
+        paged:
+          type: boolean
+        unpaged:
+          type: boolean
+        pageNumber:
+          type: integer
+          format: int32
+        pageSize:
+          type: integer
+          format: int32
     SearchResultEnterpriseSystem:
       type: object
       properties:
@@ -162,7 +180,24 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/EnterpriseSystem'
+        numberOfRecords:
+          type: integer
+          format: int64
+        pageable:
+          $ref: '#/components/schemas/PageableObject'
+    Sort:
+      type: object
+      properties:
+        empty:
+          type: boolean
+        sorted:
+          type: boolean
+        unsorted:
+          type: boolean
     EnterpriseSystemsCreateRequest:
+      required:
+        - endpointUrl
+        - name
       type: object
       properties:
         name:
@@ -177,3 +212,21 @@ components:
         id:
           type: integer
           format: int64
+        name:
+          type: string
+        endpointUrl:
+          type: string
+        authMethod:
+          type: string
+    EnterpriseSystemResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+        endpointUrl:
+          type: string
+        authMethod:
+          type: string
