# src/main/java/io/bosch/enterprisesystems/model/SearchResult.java
@@ -3,6 +3,7 @@ package io.bosch.enterprisesystems.model;
 import lombok.Builder;
 import lombok.Getter;
 import lombok.Setter;
+import org.springframework.data.domain.Pageable;
 
 import java.util.List;
 
@@ -11,4 +12,6 @@ import java.util.List;
 @Setter
 public class SearchResult<T> {
     private List<T> list;
+    private Long numberOfRecords;
+    private Pageable pageable;
 }
